# iot-mcp-bridge

./: Dockerfile  README.md  pyproject.toml
src/iot_mcp_bridge/: __init__.py  __main__.py  auth.py  config.py  db.py  logging.py  metrics.py  server.py
src/iot_mcp_bridge/tools/: __init__.py  schema.py  timeseries.py
tests/: conftest.py  test_auth.py  test_schema_tools.py  test_timeseries_tools.py
